[tool.poetry]
name = "algorithm-python"
version = "0.1.0"
description = ""
authors = ["Kodak4400 <special0747@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ruff = "^0.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = ["ALL"]
ignore = [
    "D",    # Docstringを書かなくてもよいようにする
    "T201", # 'print()'を使えるようにする
    "INP001", # __init__.pyを作成しなくてもよいようにする
    "ERA001" # コードのコメントアウトを許可する
]
fixable = ["ALL"]
target-version = "py39"

# Exclude a variety of commonly ignored directories.
exclude = [".venv", "venv"]
